[package]
name = "hello-world"
version = "0.1.0"
authors = ["Knarkzel <knarkzel@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.32", features = ["binstart"] }

[build-dependencies]
embuild = "0.31"
